--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ section.calendar .container
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: auto;
 }
 section.calendar #calendar
 {
