--- a/style.css
+++ b/style.css
@@ -1,56 +1,56 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
 
-section.calendar *{
+section.calendar * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins',sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
-section.calendar
-{
+
+section.calendar {
     position: relative;
-    display:flex;
+    display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     background: #161623;
     overflow: hidden;
 }
-section.calendar::before
-{
+
+section.calendar::before {
     content: '';
     position: absolute;
     width: 400px;
     height: 400px;
-    background: linear-gradient(#ffc107,#f10915);
+    background: linear-gradient(#ffc107, #f10915);
     border-radius: 50%;
-    transform: translate(-250px,-120px);
+    transform: translate(-250px, -120px);
 }
-section.calendar::after
-{
+
+section.calendar::after {
     content: '';
     position: absolute;
     width: 250px;
     height: 250px;
-    background: linear-gradient(#2196f3,#b413e6);
+    background: linear-gradient(#2196f3, #b413e6);
     border-radius: 50%;
-    transform: translate(250px,150px);
+    transform: translate(250px, 150px);
 }
-section.calendar .box
-{
+
+section.calendar .box {
     position: relative;
     z-index: 1000;
 }
-section.calendar .container
-{
+
+section.calendar .container {
     position: relative;
     width: 400px;
     min-height: 400px;
-    background: rgba(255,255,255,0.1);
-    box-shadow:0 25px 45px rgba(0,0,0,0.1);
-    border: 1px solid rgba(255,255,255,0.5);
-    border-right: 1px solid rgba(255,255,255,0.2);
-    border-bottom: 1px solid rgba(255,255,255,0.2);
+    background: rgba(255, 255, 255, 0.1);
+    box-shadow: 0 25px 45px rgba(0, 0, 0, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-right: 1px solid rgba(255, 255, 255, 0.2);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(25px);
     border-radius: 10px;
     display: flex;
@@ -58,21 +58,21 @@ section.calendar .container
     align-items: center;
     margin: auto;
 }
-section.calendar #calendar
-{
+
+section.calendar #calendar {
     width: 100%;
     padding: 20px;
 }
-section.calendar #calendar table
-{
+
+section.calendar #calendar table {
     width: 100%;
     margin-top: 40px;
     border-spacing: 5px;
     border-collapse: unset;
 }
-section.calendar #calendar table td
-{
-    color:#fff;
+
+section.calendar #calendar table td {
+    color: #fff;
     padding: 10px;
     border-radius: 5px;
     cursor: pointer;
@@ -80,25 +80,24 @@ section.calendar #calendar table td
     border-bottom: none;
     font-weight: bold;
 }
-section.calendar #calendar table td:hover
-{
-   background:#fff;
-   color:#111 !important;
-}
-section.calendar #calendar table tr:nth-child(1) td
-{
+
+section.calendar #calendar table td:hover {
     background: #fff;
-    color:#111;
+    color: #111 !important;
+}
+
+section.calendar #calendar table tr:nth-child(1) td {
+    background: #fff;
+    color: #111;
     border-radius: 5px;
     font-weight: 600;
-    
-}
-section.calendar .dycalendar-prev-next-btn.prev-btn 
 
-{
-    
+}
+
+section.calendar .dycalendar-prev-next-btn.prev-btn {
+
     background: #fff;
-    color:#111;
+    color: #111;
     width: 44px;
     height: 38px;
     border-radius: 4px;
@@ -107,11 +106,11 @@ section.calendar .dycalendar-prev-next-btn.prev-btn
     align-items: center;
     font-size: 25px;
 }
-section.calendar .dycalendar-prev-next-btn.next-btn
-{
-    
+
+section.calendar .dycalendar-prev-next-btn.next-btn {
+
     background: #fff;
-    color:#111;
+    color: #111;
     width: 44px;
     height: 38px;
     border-radius: 4px;
@@ -120,17 +119,18 @@ section.calendar .dycalendar-prev-next-btn.next-btn
     align-items: center;
     font-size: 25px;
 }
-section.calendar .dycalendar-span-month-year
-{
-    color:#fff;
+
+section.calendar .dycalendar-span-month-year {
+    color: #fff;
     font-size: 1.5rem;
     font-weight: 600;
 }
+
 section.calendar h3,
-section.calendar a{
+section.calendar a {
     padding-top: 50px;
     color: rgb(16, 191, 235);
     text-align: center;
     text-emphasis: none;
-    
+
 }
