--- a/style.css
+++ b/style.css
@@ -44,6 +44,12 @@ section.calendar-section .calendar {
     padding: 20px;
 }
 
+section.calendar-section .calendar h2.calendar-title {
+    color: #fff;
+    padding: 0 0 20px;
+    text-align: center;
+}
+
 section.calendar-section .calendar table {
     width: 100%;
     margin-top: 40px;
