--- a/style.css
+++ b/style.css
@@ -10,9 +10,9 @@ section.calendar-section * {
 section.calendar-section {
     position: relative;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
     background: transparent;
     overflow: hidden;
 }
@@ -20,6 +20,7 @@ section.calendar-section {
 section.calendar-section .box {
     position: relative;
     z-index: 1000;
+    margin: 20px 0;
 }
 
 section.calendar-section .container {
